# ansible-androidstudio

./: .ansible-lint  .blueprint.json  .cspell.json  .dictionary.txt  .editorconfig  .eslintrc.cjs  .eslintrc.js  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .prettierignore  .start.sh  .travis.yml  .variables.json  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.handlebars  README.md  Taskfile.yml  Taskfile.yml.handlebars  Taskfile.yml.liquid  ansible_actions.md  ansible_todo.md  github-awesome-data.json  package-lock.json  package.ansibler.json  package.hbs.json  package.json  package.json.handlebars  package.json.liquid  pnpm-lock.yaml  pyproject.hbs.toml  pyproject.toml  pyproject.toml.liquid  requirements.txt  requirements.yml  sonar-project.properties  (+4 more)
.config/: codeclimate.yml  common-keywords.hbs.json  eslintcache  hadolint.yml  hbs.cjs  log  variables.json
.config/docs/: .gitlab-ci.yml  Taskfile.yml  blueprint-contributing.md  blueprint-readme-ansible-molecule.md  blueprint-readme-ci-pipeline-slim.md  blueprint-readme-ci-pipeline.md  blueprint-readme-playbook.md  blueprint-readme-role.md  common.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  variables.json
.config/docs/.config/: hbs.cjs  start.sh  yamllint.yml
.config/docs/.config/fastlane/: Appfile
.config/docs/.config/scripts/: vscode.sh
.config/docs/.config/taskfiles/: Taskfile-boilr.yml  Taskfile-fix.yml  Taskfile-git.yml  Taskfile-packer.yml  Taskfile-python.yml  Taskfile-security.yml
.config/docs/.config/taskfiles/ansible/: Taskfile-ansibler.yml  Taskfile-playbook.yml  Taskfile.yml
.config/docs/.config/taskfiles/common/: Taskfile-update.yml  Taskfile.yml
.config/docs/.config/taskfiles/install/: Taskfile-npm.yml  Taskfile-software.yml  Taskfile.yml
.config/docs/.config/taskfiles/lint/: Taskfile-esprint.yml  Taskfile.yml
.config/docs/.config/taskfiles/npm/: Taskfile-cov.yml  Taskfile.yml
.config/docs/.config/taskfiles/upstream/: Taskfile-common.yml  Taskfile-commondocs.yml  Taskfile-docs.yml  Taskfile-project.yml  Taskfile-shared.yml  Taskfile.yml
.config/docs/.gitlab/ci/fix/: packer.gitlab-ci.yml  shellcheck.gitlab-ci.yml
.config/docs/.gitlab/ci/lint/: ansible-lint.gitlab-ci.yml  eslint.gitlab-ci.yml  gitlab-ci-lint.gitlab-ci.yml  hadolint.gitlab-ci.yml  markdown-lint.gitlab-ci.yml  packer.gitlab-ci.yml  prettier.gitlab-ci.yml  shellcheck.gitlab-ci.yml  sonarcloud.gitlab-ci.yml  standard.gitlab-ci.yml  stylelint.gitlab-ci.yml  vagrant.gitlab-ci.yml  yamllint.gitlab-ci.yml
.config/docs/.gitlab/ci/lint/python/: black.gitlab-ci.yml  flake8.gitlab-ci.yml  mypy.gitlab-ci.yml  pydocstyle.gitlab-ci.yml
.config/docs/.gitlab/ci/publish/angular/: artifacts.gitlab-ci.yml
.config/docs/.gitlab/ci/publish/ansible/: galaxy.gitlab-ci.yml
.config/docs/.gitlab/ci/publish/docker/: gitlab-registry.gitlab-ci.yml
.config/docs/.gitlab/ci/publish/python/: pypi.gitlab-ci.yml
.config/docs/.gitlab/ci/test/: jest-e2e.gitlab-ci.yml  jest.gitlab-ci.yml
.config/docs/.gitlab/ci/test/ansible/: playbook.gitlab-ci.yml  playbook.macos.gitlab-ci.yml  role.gitlab-ci.yml  role.macos.gitlab-ci.yml  role.windows.gitlab-ci.yml
.config/docs/.gitlab/ci/test/docker/: slim.gitlab-ci.yml
.config/docs/.gitlab/ci/update/: common.gitlab-ci.yml  project.gitlab-ci.yml
.config/docs/common/contributing/: header.md
.config/docs/common/readme/: contribute.md  header.md
.config/docs/contributing/: build-process.md  code-of-conduct.md  docs.md  getting-started.md  header.md  linting.md  overview.md  philosophy.md  pull-requests.md  requirements.md  testing.md
.config/docs/readme/: build-tools.md  building.md  contributing-details.md  fat-build-only.md  header.md  license.md  quick-description.md  requirements.md  slim-build.md  slim-disclaimer.md  subheader.md
.config/docs/readme-ci-pipeline/: example.md  overview.md
.config/docs/readme-molecule/: example.md  integrating-with-molecule.md  overview.md
.config/docs/readme-playbook/: architecture.md  dependencies.md  introduction.md  managing-environments.md  philosophy.md  quick-description.md  quick-start.md  roles.md  software.md  subheader.md  web-apps.md
.config/docs/readme-role/: dependencies.md  example.md  subheader.md  supported-os.md
.config/fastlane/: Fastfile
.config/husky/: commit-msg  prepare-commit-msg
.config/molecule/: docker.create.yml  docker.destroy.yml  vagrant.create.yml  vagrant.destroy.yml
.config/scripts/: start.sh
.config/taskfiles/: Taskfile-ci.yml  Taskfile-docker.yml  Taskfile-fix.yml  Taskfile-git.yml  Taskfile-packer.yml  Taskfile-python.yml  Taskfile-security.yml  Taskfile-symlink.yml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: BugReport.yml  BugReport.yml.liquid  FeatureRequest.yml  FeatureRequest.yml.liquid  SupportRequest.yml  SupportRequest.yml.liquid
.github/workflows/: Galaxy.yml  Windows.yml  ci.yml  macOS.yml
.husky/: commit-msg  pre-commit  prepare-commit-msg
.husky/.husky/: commit-msg  prepare-commit-msg
.task/checksum/: common-dependencies-nodejs
defaults/: main.yml
docs/: CHANGELOG.md  CONTRIBUTING.md
local/: cyclonedx-npm-npm.json  cyclonedx-npm-npm.vex.json  package-lock.json
local/slim/: exe.txt  install.txt
meta/: main.yml
molecule/: converge.hbs.yml  converge.vagrant.yml  converge.yml  converge.yml.liquid
molecule-results/: 2021-08-03-docker-snap.txt
molecule/docker/: converge.yml  (+1 more)
tasks/: install-Archlinux.yml  install-Darwin.yml  install-Linux.yml  install-Windows.yml  main.yml  user-Linux.yml  user-Windows.yml
tasktest/: Taskfile-docker.yml  Taskfile-fix.yml  Taskfile-git.yml  Taskfile-image.yml  Taskfile-install.yml  Taskfile-lint.yml  Taskfile-npm.yml  Taskfile-packer.yml  Taskfile-python.yml  Taskfile-security.yml  Taskfile-vscode.yml
tests/: ansible.cfg  inventory-windows  test-windows.sh  test.sh  test.yml  windows.ps1
vars/: Windows.yml
(+1093 files in other folders)
